<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tilEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:errorTextAppearance="@style/Widget.TextInputError">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiedUserHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/tilUser"
        app:layout_constraintStart_toStartOf="@+id/tilUser"
        app:layout_constraintTop_toBottomOf="@+id/tilUser"
        app:errorTextAppearance="@style/Widget.TextInputError">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/tiedPasswordHint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:errorTextAppearance="@style/Widget.TextInputError">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/tiedEmailHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="@dimen/btSignInLoginWidth"
        android:layout_height="@dimen/btSignInLoginHeight"
        android:text="@string/btSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        android:textColor="@android:color/white"
        android:background="@drawable/selector_round_corner"/>

</androidx.constraintlayout.widget.ConstraintLayout>