<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingGlobalLayout"
    tools:context=".iu.Evento.CrearPublicacionFragment"
    android:id="@+id/constraintLayout">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvTipoDePublicacion"
        app:layout_constraintStart_toStartOf="@+id/etTituloPublicacion"
        app:layout_constraintTop_toBottomOf="@+id/etTituloPublicacion"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="59dp" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="200dp"
        android:layout_height="135dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <RadioButton
            android:id="@+id/rbTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Texto" />

        <RadioButton
            android:id="@+id/rbImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Imagen" />

        <RadioButton
            android:id="@+id/rbVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vídeo" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="Título"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTituloPublicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <LinearLayout
        android:id="@+id/linearLayoutTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTextollTexto" />

        <EditText
            android:id="@+id/etTextoPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvImagenllImagen" />

        <ImageView
            android:id="@+id/imgPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_foreground" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvVideollVideo" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="200dp"
            android:layout_height="200dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>